[package]
name = "search_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bk-tree = "0.5.0"
bzip2 = "0.6.1"
pdf-extract = "0.10.0"
pdf_oxide = "0.1.2"
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23.0"
search_engine_compressors = "0.1.1"